--- a/project-18/package.json
+++ b/project-18/package.json
@@ -8,8 +8,9 @@
     "start": "next start"
   },
   "dependencies": {
+    "fs": "^0.0.1-security",
     "mongodb": "^4.12.1",
-    "next": "^13.0.7",
+    "next": "^13.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   }
