--- a/project-22/package.json
+++ b/project-22/package.json
@@ -9,9 +9,11 @@
     "@types/jest": "^26.0.22",
     "@types/node": "^12.20.7",
     "@types/react": "^17.0.3",
+    "@types/uuid": "^9.0.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "typescript": "^4.2.3",
+    "uuid": "^9.0.0",
     "web-vitals": "^1.1.1"
   },
   "scripts": {
